--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,6 +33,10 @@ jobs:
       with:
         java-version: 1.8
     - name: Clean and Package
+      if: github.event.inputs.profiles == ''
+      run: mvn clean package
+    - name: Clean and Package With Profiles
+      if: github.event.inputs.profiles != ''
       run: mvn -P ${{ github.event.inputs.profiles }} clean package
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1.0.2
