--- a/httpclient-core/pom.xml
+++ b/httpclient-core/pom.xml
@@ -19,13 +19,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.github.esastack</groupId>
+        <groupId>io.esastack</groupId>
         <artifactId>httpclient</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>httpclient-core</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.1.0-SNAPSHOT</version>
     <name>HttpClient :: Core</name>
 
     <properties>
@@ -34,19 +34,19 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.github.esastack</groupId>
+            <groupId>io.esastack</groupId>
             <artifactId>commons</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.github.esastack</groupId>
+            <groupId>io.esastack</groupId>
             <artifactId>commons-http</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.github.esastack</groupId>
+            <groupId>io.esastack</groupId>
             <artifactId>commons-netty-http</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.github.esastack</groupId>
+            <groupId>io.esastack</groupId>
             <artifactId>commons-netty-core</artifactId>
         </dependency>
         <!-- need be shaded -->
