--- a/pom.xml
+++ b/pom.xml
@@ -19,10 +19,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.esastack</groupId>
+    <groupId>io.esastack</groupId>
     <artifactId>httpclient</artifactId>
     <packaging>pom</packaging>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.1.0-SNAPSHOT</version>
 
     <name>HttpClient</name>
     <description>
@@ -111,7 +111,7 @@
         <encoding>UTF-8</encoding>
         <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
         <project.reporting.outputEncoding>${encoding}</project.reporting.outputEncoding>
-        <esa-commons.version>0.0.1</esa-commons.version>
+        <esa-commons.version>0.1.0</esa-commons.version>
         <netty.version>4.1.52.Final</netty.version>
         <netty-tcnative.version>2.0.34.Final</netty-tcnative.version>
         <jzlib.version>1.1.3</jzlib.version>
@@ -144,22 +144,22 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>com.github.esastack</groupId>
+                <groupId>io.esastack</groupId>
                 <artifactId>commons</artifactId>
                 <version>${esa-commons.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.github.esastack</groupId>
+                <groupId>io.esastack</groupId>
                 <artifactId>commons-http</artifactId>
                 <version>${esa-commons.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.github.esastack</groupId>
+                <groupId>io.esastack</groupId>
                 <artifactId>commons-netty-core</artifactId>
                 <version>${esa-commons.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.github.esastack</groupId>
+                <groupId>io.esastack</groupId>
                 <artifactId>commons-netty-http</artifactId>
                 <version>${esa-commons.version}</version>
             </dependency>
@@ -268,6 +268,12 @@
                 <groupId>org.sonatype.plugins</groupId>
                 <artifactId>nexus-staging-maven-plugin</artifactId>
                 <version>1.6.8</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <serverId>ossrh</serverId>
+                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -303,7 +309,7 @@
                         <version>8.35</version>
                     </dependency>
                     <dependency>
-                        <groupId>com.github.esastack</groupId>
+                        <groupId>io.esastack</groupId>
                         <artifactId>commons-build</artifactId>
                         <version>${esa-commons.version}</version>
                     </dependency>
