--- a/httpclient-core/pom.xml
+++ b/httpclient-core/pom.xml
@@ -21,11 +21,11 @@
     <parent>
         <groupId>io.esastack</groupId>
         <artifactId>httpclient</artifactId>
-        <version>0.1.0-SNAPSHOT</version>
+        <version>0.0.1</version>
     </parent>
 
     <artifactId>httpclient-core</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>HttpClient :: Core</name>
 
     <properties>
