--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <groupId>io.esastack</groupId>
     <artifactId>httpclient</artifactId>
     <packaging>pom</packaging>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.0.1</version>
 
     <name>HttpClient</name>
     <description>
