feat(restclient-core):
1. Preliminary completion of various request types of restclient
2. Preliminary completion of restclient builder model

--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,7 @@
 
     <modules>
         <module>httpclient-core</module>
+        <module>restclient-core</module>
     </modules>
 
     <properties>
