--- a/restclient-core/pom.xml
+++ b/restclient-core/pom.xml
@@ -29,6 +29,7 @@
     <properties>
         <httpclient.version>0.1.0</httpclient.version>
         <apache.commons.version>4.4</apache.commons.version>
+        <gson.version>2.8.6</gson.version>
     </properties>
 
     <dependencies>
@@ -36,6 +37,11 @@
             <groupId>io.esastack</groupId>
             <artifactId>httpclient-core</artifactId>
             <version>${httpclient.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
