--- a/restclient/pom.xml
+++ b/restclient/pom.xml
@@ -28,7 +28,6 @@
 
     <properties>
         <httpclient.version>0.1.1-SNAPSHOT</httpclient.version>
-        <gson.version>2.8.6</gson.version>
     </properties>
 
     <dependencies>
@@ -38,9 +37,23 @@
             <version>${httpclient.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>${gson.version}</version>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
