upgrade commons-build to v1.0(https://github.com/esastack/esa-commons-build)

--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,7 @@
         <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
         <project.reporting.outputEncoding>${encoding}</project.reporting.outputEncoding>
         <esa-commons.version>0.1.0</esa-commons.version>
+        <esa-commons-build.version>1.0</esa-commons-build.version>
         <netty.version>4.1.52.Final</netty.version>
         <netty-tcnative.version>2.0.34.Final</netty-tcnative.version>
         <jzlib.version>1.1.3</jzlib.version>
@@ -280,7 +281,7 @@
                         <id>check-style</id>
                         <configuration>
                             <skip>false</skip>
-                            <configLocation>esa/commons/checkstyle.xml</configLocation>
+                            <configLocation>io/esastack/commons/checkstyle.xml</configLocation>
                             <encoding>${encoding}</encoding>
                             <consoleOutput>true</consoleOutput>
                             <logViolationsToConsole>true</logViolationsToConsole>
@@ -307,7 +308,7 @@
                     <dependency>
                         <groupId>io.esastack</groupId>
                         <artifactId>commons-build</artifactId>
-                        <version>${esa-commons.version}</version>
+                        <version>${esa-commons-build.version}</version>
                     </dependency>
                 </dependencies>
             </plugin>
