--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,7 @@
         <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
         <project.reporting.outputEncoding>${encoding}</project.reporting.outputEncoding>
         <esa-commons.version>0.1.1</esa-commons.version>
+        <esa-commons-net.version>0.0.1-SNAPSHOT</esa-commons-net.version>
         <netty.version>4.1.52.Final</netty.version>
         <netty-tcnative.version>2.0.34.Final</netty-tcnative.version>
         <jzlib.version>1.1.3</jzlib.version>
@@ -165,6 +166,11 @@
                 <groupId>io.esastack</groupId>
                 <artifactId>commons-netty-http</artifactId>
                 <version>${esa-commons.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.esastack</groupId>
+                <artifactId>commons-net-core</artifactId>
+                <version>${esa-commons-net.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.netty</groupId>
