--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,7 @@
         <jackson.version>2.10.1</jackson.version>
         <gson.version>2.8.5</gson.version>
         <protobuf.version>3.6.1</protobuf.version>
+        <mock-server.version>5.11.2</mock-server.version>
     </properties>
 
     <dependencies>
@@ -141,6 +142,12 @@
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>${assertj.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mock-server</groupId>
+            <artifactId>mockserver-netty</artifactId>
+            <version>${mock-server.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
