--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,12 @@
 
     <profiles>
         <profile>
+            <id>it_test</id>
+            <properties>
+                <excludes-tests>nothing</excludes-tests>
+            </properties>
+        </profile>
+        <profile>
             <id>release</id>
             <build>
                 <plugins>
@@ -123,6 +129,7 @@
         <gson.version>2.8.5</gson.version>
         <protobuf.version>3.6.1</protobuf.version>
         <mock-server.version>5.11.2</mock-server.version>
+        <excludes-tests>**/it/**Test.java</excludes-tests>
     </properties>
 
     <dependencies>
@@ -271,6 +278,7 @@
                         <include>**/*Test.java</include>
                         <include>**/*Tests.java</include>
                     </includes>
+                    <excludes>${excludes-tests}</excludes>
                 </configuration>
             </plugin>
             <plugin>
