--- a/restclient/pom.xml
+++ b/restclient/pom.xml
@@ -42,6 +42,10 @@
             <artifactId>commons-net-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.esastack</groupId>
+            <artifactId>commons-net-netty</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
