--- a/pom.xml
+++ b/pom.xml
@@ -18,13 +18,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.esastack</groupId>
-    <artifactId>httpclient</artifactId>
+    <artifactId>restclient-parent</artifactId>
     <packaging>pom</packaging>
     <version>1.0.0-SNAPSHOT</version>
 
-    <name>HttpClient</name>
+    <name>RestClient-Parent</name>
     <description>
-        ESA HttpClient is an asynchronous event-driven http client based on netty.
+        ESA RestClient is an asynchronous event-driven http client based on netty.
     </description>
     <url>https://github.com/esastack</url>
 
