--- a/restclient/pom.xml
+++ b/restclient/pom.xml
@@ -19,7 +19,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>io.esastack</groupId>
-        <artifactId>httpclient</artifactId>
+        <artifactId>restclient-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
