--- a/httpclient-core/pom.xml
+++ b/httpclient-core/pom.xml
@@ -19,11 +19,11 @@
     <parent>
         <groupId>io.esastack</groupId>
         <artifactId>restclient-parent</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <artifactId>httpclient-core</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>HttpClient :: Core</name>
 
     <properties>
