--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <groupId>io.esastack</groupId>
     <artifactId>restclient-parent</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
 
     <name>RestClient-Parent</name>
     <description>
@@ -39,7 +39,7 @@
         <url>https://github.com/esastack/esa-httpclient</url>
         <connection>scm:git:git://github.com/esastack/esa-httpclient.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/esastack/esa-httpclient.git</developerConnection>
-        <tag>v1.0.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <developers>
