--- a/restclient/pom.xml
+++ b/restclient/pom.xml
@@ -19,15 +19,15 @@
     <parent>
         <groupId>io.esastack</groupId>
         <artifactId>restclient-parent</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>restclient</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <name>RestClient</name>
 
     <properties>
-        <httpclient.version>1.0.0</httpclient.version>
+        <httpclient.version>1.0.1-SNAPSHOT</httpclient.version>
     </properties>
 
     <dependencies>
