--- a/site/config.toml
+++ b/site/config.toml
@@ -137,15 +137,15 @@ version = "0.0"
 
 # A link to latest version of the docs. Used in the "version-banner" partial to
 # point people to the main doc site.
-url_latest_version = "https://www.esastack.io/restclient/docs/"
+url_latest_version = "https://restclient.esastack.io/docs/"
 
 # Repository configuration (URLs for in-page links to opening issues and suggesting changes)
-github_repo = "https://github.com/esastack/restclient-website"
+github_repo = "https://github.com/esastack/esa-restclient"
 # An optional link to a related project repo. For example, the sibling repository where your product code lives.
 github_project_repo = "https://github.com/esastack/esa-restclient"
 
 # Specify a value here if your content directory is not in your repo's root directory
-# github_subdir = ""
+github_subdir = "site"
 
 # Uncomment this if you have a newer GitHub repo with "main" as the default branch,
 # or specify a new value if you want to reference another branch in your GitHub links
