--- a/site/config.toml
+++ b/site/config.toml
@@ -123,7 +123,7 @@ copyright = "OPPO ESA Stack Project"
 
 # Menu title if your navbar has a versions selector to access old versions of your site.
 # This menu appears only if you have at least one [params.versions] set.
-version_menu = "RestClient Version"
+version_menu = "Versions"
 
 # Flag used in the "version-banner" partial to decide whether to display a 
 # banner on every page indicating that this is an archived version of the docs.
@@ -212,3 +212,11 @@ enable = false
   url = "mailto:esa.stack@oppo.com"
   icon = "fa fa-envelope"
   desc = "Discuss development issues around the project"
+
+# multi-versions
+[[params.versions]]
+  version = "v1.0.0 (Latest)"
+  url = "/docs"
+[[params.versions]]
+  version = "v0.1.0"
+  url = "/docs-v0.1.0"
