add module named restclient-redefine-interceptor

--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,7 @@
     <modules>
         <module>httpclient-core</module>
         <module>restclient</module>
+        <module>restclient-ext</module>
     </modules>
 
     <properties>
