--- a/restclient-ext/pom.xml
+++ b/restclient-ext/pom.xml
@@ -39,6 +39,7 @@
             <groupId>io.esastack</groupId>
             <artifactId>restclient</artifactId>
             <version>${restclient.version}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
