--- a/restclient-ext/request-redefine-interceptor/request-redefine-file-config/pom.xml
+++ b/restclient-ext/request-redefine-interceptor/request-redefine-file-config/pom.xml
@@ -18,21 +18,30 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>restclient-ext</artifactId>
+        <artifactId>request-redefine-interceptor</artifactId>
         <groupId>io.esastack</groupId>
         <version>1.0.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>request-redefine-interceptor</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>request-redefine-file-config</module>
-    </modules>
+    <artifactId>request-redefine-file-config</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <snakeyaml.version>1.30</snakeyaml.version>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>io.esastack</groupId>
+            <artifactId>request-redefine-interceptor</artifactId>
+            <version>${restclient.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>${snakeyaml.version}</version>
+        </dependency>
+    </dependencies>
 </project>
