--- a/restclient-ext/pom.xml
+++ b/restclient-ext/pom.xml
@@ -28,6 +28,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>request-redefine-interceptor</module>
+        <module>request-redefine-file-config</module>
     </modules>
 
     <properties>
