--- a/restclient-ext/request-redefine-file-config/pom.xml
+++ b/restclient-ext/request-redefine-file-config/pom.xml
@@ -18,7 +18,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>request-redefine-interceptor</artifactId>
+        <artifactId>restclient-ext</artifactId>
         <groupId>io.esastack</groupId>
         <version>1.0.2-SNAPSHOT</version>
     </parent>
