modify a rule can use multiple aggregate conditions

--- a/restclient-ext/traffic-split-file-config/pom.xml
+++ b/restclient-ext/traffic-split-file-config/pom.xml
@@ -24,11 +24,24 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>request-redefine-interceptor</artifactId>
+    <artifactId>traffic-split-file-config</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <snakeyaml.version>1.30</snakeyaml.version>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>io.esastack</groupId>
+            <artifactId>traffic-split-interceptor</artifactId>
+            <version>${restclient.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>${snakeyaml.version}</version>
+        </dependency>
+    </dependencies>
 </project>
